Update .gitignore and CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ project (cxlmalloc
 # WARNING_FLAGS:=-ftrapv -Wreturn-type -W -Wall \
 # -Wno-unused-variable -Wno-unused-but-set-variable -Wno-unused-parameter
 
-option(USE_CXL "option for using cxl devic" ON)
+option(USE_CXL "option for using cxl devic" OFF)
 # if you would like to disbale, use '-D USE_CXL=OFF'
 
 if(USE_CXL)
